# docutent-distiller

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docutent_distiller/: bert_vectorizer.py  cluster_discovery.py  data_snapshot.py  document_vectorizer.py  encapsulator.py  hybrid_bert_vectorizer.py  kmeans_clustering.py  long_document_embedder.py  ml_project.py  pu_learning.py  sbert_embedding.py
docutent_distiller/resources/doc_template/docs/: index.md
examples/pu_learning/: positive_unlabeled_learning_example.py
tests/: test_bert_vectorizer.py  test_data_snapshot.py  test_document_vectorizer.py  test_encapsulator.py  test_hybrid_vectorizer.py  test_long_document_embedder.py  test_ml_project.py  test_positive_unlabeled_learning.py  test_positive_unlabeled_learning_example.py  test_pu_learning.py  test_sbert_embedding.py  test_text_readers.py  test_text_writers.py
tests/test_documents/: Moore.doc  Moore.docx  Moore.odt  Moore.rtf  Moore.txt  demo.epub  example.xml  impress.odp  impress.pps  impress.pptx  io.ods  io.xls  io.xlsx  meta.csv  meta.ods  meta.xls  meta.xlsx  note.xml  xmp_parsing_result.json
