# Main package description
[tool.poetry]
name = "docutent_distiller"
version = "0.1.0"
description = "<DESCRIPTION>"
authors = [
    "MONTANA Knowledge Management ltd. <info@distiller.dev>",
    "Daniel Nagy <daniel.nagy@montana.hu>",
    "Tamas Orosz <orosz.tamas@montana.hu>",
    "Krisztian Gado <gado.krisztian@montana.hu>",
    "Gergely Csanyi <csanyi.gergely@montana.hu>",
    "Istvan Uveges <istavan.uveges@montana.hu>"
]
license = "AGPL"

# Project dependencies only
[tool.poetry.dependencies]
python = ">=3.8,<3.10"


# Dependencies for developers
importlib-resources = "^5.8.0"
tika = "^1.24"
tqdm = "^4.64.0"
gensim = "^4.2.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
matplotlib = "^3.5.2"
Jinja2 = "^3.1.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"
# list all devtools here
scikit-learn = "^1.2.2"
urllib3 = "<2"
requests = "<=2.29"
fasttext-wheel = "^0.9.2"
[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
isort = "*"
pyupgrade = "*"
pylint = "*"


# build system setup
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# DEVTOOLS CONFIG #

#BLACK
[tool.black]
line-length = 120
target-version = ['py39']
# force-exclude = '''
#   (
#     resources/
#   | tests/
#   )
# '''
quiet = true


# COVERAGE
# https://coverage.readthedocs.io/en/6.1.1/config.html

[tool.coverage.run]
command_line = "-m py.test"
source = ['docutent_distiller']
branch = true
# omit = []

[tool.coverage.report]
sort = "cover"
exclude_lines = [
    'if __name__ == "__main__":',
    'def __repr__',
    'def __str',
    '@(abc\.)?abstractmethod'
]
omit = ['tests']



# ISORT
# https://pycqa.github.io/isort/docs/configuration/options.html

[tool.isort]
profile = "black"
line_length = 120
case_sensitive = true
use_parentheses = false
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
quiet = true

[tool.pylint.MASTER]
max-line-length = 120
fail-under = 0.85
ignore = ['LICENSE']
ignore-paths = ['tests', 'resources']
disable = [
    "bad-continuation",
    "duplicate-code",
    "invalid-name",
    "missing-docstring",
    "too-few-public-methods",
]

# [too.pylint.message_control]
# max-line-length = 80
# disable = [
#   "missing-docstring",
#   "unused-argument",
#   "no-value-for-parameter",
#   "no-member",
#   "no-else-return",
#   "bad-whitespace",
#   "bad-continuation",
#   "line-too-long",
#   "fixme",
#   "protected-access",
#   "too-few-public-methods",
# ]
